@@ -67,6 +67,8 @@ cronQueries=true
 dontSaveBPFs=port 12345
 webBasePath = /moloch/
 esAdminUsers=admin
+businessDayStart=9
+businessDayEnd=17
 
 [testmulties]
 pcapWriteMethod=simple
