@@ -19,6 +19,8 @@
       const MOLOCH_HUNTWARN = {{ huntWarn }};
       const MOLOCH_HUNTLIMIT = {{ huntLimit }};
       const MOLOCH_ANONYMOUS_MODE = {{ anonymousMode }};
+      const MOLOCH_DAY_START = {{ dayStart }};
+      const MOLOCH_DAY_END = {{ dayEnd }};
     </script>
   </head>
   <body class="{{ theme }}">
