@@ -63,7 +63,9 @@ new Vue({
       MOLOCH_MULTIVIEWER: MOLOCH_MULTIVIEWER,
       MOLOCH_HUNTWARN: MOLOCH_HUNTWARN,
       MOLOCH_HUNTLIMIT: MOLOCH_HUNTLIMIT,
-      MOLOCH_ANONYMOUS_MODE: MOLOCH_ANONYMOUS_MODE
+      MOLOCH_ANONYMOUS_MODE: MOLOCH_ANONYMOUS_MODE,
+      MOLOCH_DAY_START: MOLOCH_DAY_START,
+      MOLOCH_DAY_END: MOLOCH_DAY_END
     };
   }
 });
